--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "align-text",
   "description": "Align the text in a string.",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "homepage": "https://github.com/jonschlinkert/align-text",
   "author": {
     "name": "Jon Schlinkert",
@@ -14,10 +14,7 @@
   "bugs": {
     "url": "https://github.com/jonschlinkert/align-text/issues"
   },
-  "license": {
-    "type": "MIT",
-    "url": "https://github.com/jonschlinkert/align-text/blob/master/LICENSE"
-  },
+  "license": "MIT",
   "files": [
     "index.js"
   ],
@@ -29,13 +26,14 @@
     "test": "mocha"
   },
   "dependencies": {
-    "kind-of": "^1.1.0",
-    "longest": "^1.0.0",
-    "repeat-string": "^1.5.0"
+    "kind-of": "^2.0.0",
+    "longest": "^1.0.1",
+    "repeat-string": "^1.5.2"
   },
   "devDependencies": {
     "mocha": "*",
-    "should": "*"
+    "should": "*",
+    "word-wrap": "^1.0.3"
   },
   "keywords": [
     "align",
