--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
 sudo: false
+os:
+  - linux
+  - osx
 language: node_js
 node_js:
-  - "0.10"
-  - "0.12"
-  - "iojs"
-git:
-  depth: 10
+  - node
+  - iojs
+  - '7'
+  - '6'
+  - '5'
+  - '4'
+  - '0.12'
+  - '0.10'
